# sentiment-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/: public_mixed.json
references/: architecture.md
reports/web-demo/: index.html
reports/web-demo/css/: styles.css
reports/web-demo/js/: app.js
scripts/: download_dataset.py  evaluate_model.py  run_demo.py
src/: __init__.py  config.py  dataset.py  models.py
src/modeling/: __init__.py  predict.py  train.py
src/services/: __init__.py  api.py
tests/integration/: test_api.py
tests/unit/: test_classifier.py  test_models.py
